Tests second commit